Return created or updated models
